--- a/Inhalt/04_Inhalt/Evaluation.tex
+++ b/Inhalt/04_Inhalt/Evaluation.tex
@@ -1,6 +1,4 @@
 \chapter{Evaluation of the result}
-Bewertung der Lösung anhand der Aufgabenstellung und der Kriterien
-
 Different Chapters in this thesis mention their respective objectives and criteria. This Chapter evaluated the result on the basis of these standards.
 
 \paragraph{Detailed Task Description}
@@ -61,7 +59,7 @@ The topic model generates a topic which aims to describe all documents in one cl
 %4. Aggregating expenses by their clusters and visualizing the output.
 Fourth, the visualization.
 % how are the clusters visualized
-A bubble chart (\ref{fig:dashboard}) shows each cluster. The size of a bubble represents the magnitude of spending in this category.
+A bubble chart (Figure \ref{fig:dashboard-bubble}) shows each cluster. The size of a bubble represents the magnitude of spending in this category.
 % what does the visualization tell you?
 The visualization gives an easily comprehensible representation of spending. 
 
