--- a/Inhalt/04_Inhalt/ObjectivesandCriteria.tex
+++ b/Inhalt/04_Inhalt/ObjectivesandCriteria.tex
@@ -34,6 +34,6 @@ Fifth, the \ac{CRISP-DM} model was publicized in the context of a 70-page guide 
 
 Classically, the reference model consists of six phases. For this thesis the model was adapted to reflect all tasks encompassed. The phase "Dataset Selection" was added, resulting in a total of seven phases. The newly added phase includes the selection of a suitable dataset, the data retrieval, and the data provisioning. This results in a process model adapted to this specific project, and lays the groundwork for a successful undertaking.
 
-The thesis is constructed in such a way, that Chapters 4 to 10 each document one of the seven phases of the process.
+The Chapters 4 to 10 each document one of the seven phases of the process. The Chapters 7 and 8 additionally subdivide into an assessment of alternatives, a theoretical and a practical implementation.
 
  
