--- a/Inhalt/04_Inhalt/content_dataset_selection.tex
+++ b/Inhalt/04_Inhalt/content_dataset_selection.tex
@@ -3,13 +3,18 @@
 	\section{Choosing a Data Source}
 	\label{data-source}
 	
-	With the project type as a decisive factor for the dataset explained, the other evaluation criteria for the dataset is described. In the corporate environment two fundamental sources for data exist. 
+	The research questions set the focus on invoice data. In the corporate environment two fundamental sources for data exist. 
 	
-	\begin{table}[]
+	Firstly, data can be sourced from inside the company. This can include customer data or data generated from observation and monitoring processes inside the company \cite{internalExternalData}. Data is either directly or very closely related to the company's business. Because internally sourced data is of utter utility and a possible target for industrial espionage, internally sourced data is almost exclusively rated confidential, limiting even intra-company access to it. Authorization processes and more than often not existing registries for data may hinder project progress.
+	
+	Secondly, data can be sourced outside the company. A vast number of online registries for data exist, both with paid and free of charge service offerings \cite{whyExternalData}. Data sources include social media data, sensory data and weather data. Because of its publication, the data is sometimes stripped from all parts which could expose confidential information such as corporate secrets. Additionally, data is anonymized for privacy reasons. External Data can give valuable insights into industries and markets especially for data scientists without access to paid databases, or for small businesses without the option for an own data collection.
+	
+		\begin{table}[!h]
 		\caption{Comparison of Data Sources}
+		\label{table:data-sources}
 		\begin{tabular}{lll}
 			\toprule
-			 & \textbf{Internal Data}                                                                                             & \textbf{External Data}                                                                                               \\
+			& \textbf{Internal Data}                                                                                             & \textbf{External Data}                                                                                               \\
 			\midrule
 			
 			Source       & \begin{tabular}[c]{@{}l@{}}Internal or customer data, \\ bought or generated\end{tabular}            & \begin{tabular}[c]{@{}l@{}}Publicly available, \\ generated or supplied by companies\end{tabular}      \\ \midrule
@@ -24,19 +29,10 @@
 		\end{tabular}
 	\end{table}
 	
-	\subsection{Potential Data Sources}
-	Firstly, data can be sourced from inside the company. This can include customer data or data generated from observation and monitoring processes inside the company \cite{internalExternalData}. Data is either directly or very closely related to the company's business. Because internally sourced data is of utter utility and a possible target for industrial espionage, internally sourced data is almost exclusively rated confidential, limiting even intra-company access to it. Authorization processes and more than often not existing registries for data may hinder project progress.
-	
-	Secondly, data can be sourced outside the company. A vast number of online registries for data exist, both with paid and free of charge service offerings \cite{whyExternalData}. Data sources include social media data, sensory data and weather data. Because of its publication, the data is sometimes stripped from all parts which could expose confidential information such as corporate secrets. Additionally, data is anonymized for privacy reasons. External Data can give valuable insights into industries and markets especially for data scientists without access to paid databases, or for small businesses without the option for an own data collection.
-	
-	
-	
-	\subsection{Selected Data Source}
-	It can be stated, that both sources are suited for different goals and different contexts. For data scientists with internal sources available, this type of source seems more appealing. An approach of connecting both internal and external data is an option, but not within the scope of this project. For this project, internally sourced data is chosen as a source.
+	Table \ref{table:data-sources} summarizes the advantages and disadvantages of each data source. It can be stated, that both sources are suited for different goals and different contexts. But, for data scientists with internal sources available, this type of source is more appealing because of the high relevance to the business.. An approach of connecting both internal and external data is an option, but not within the scope of this project. For this project, internally sourced data is chosen as a source.
 	
 	\section{Choosing a Dataset}
-	The dataset is the foundation of a data-science project. The quality, size, and closeness to reality decide the helpfulness of findings made using the data.
-	In this section, a classification for data-science projects is introduced as a guide for dataset selection.
+	The dataset is the foundation of a data-science project. The quality, size, and closeness to reality decide the helpfulness of findings made using the data. The previous section set the source of data as internal data. In this section, a classification for data-science projects is introduced as a guide for dataset selection.
 	
 	\subsection{Project Types}
 \begin{table}[!ht]
@@ -57,18 +53,18 @@
 	\end{tabular}
 \end{table}
 
-	The problem-first project type is characterized by a predefined problem statement or research goal. The underlying question is how a specific problem can be solved \cite[p.~3051]{dataScienceProjectTypes}.  For the selection of the dataset, this requires that goal achievement can be measured with existing ground truth. In some cases, also other methods such as expert judgments can be sufficient. In a problem-first project different datasets can and should be considered. \cite[p.~3051]{dataScienceProjectTypes} give the metaphor of "mining for valuable minerals or metals at a given geographic location where the existence of the minerals or metals has been established". This means that it is already verified that the business goal can be reached with this specific dataset, hence the metaphor of already discovered mineral occurrence.
+	The first type of project is the problem-first project.	It is characterized by a predefined problem statement or research goal. The underlying question is how the project can solve a specific problem \cite[p.~3051]{dataScienceProjectTypes}.  For the selection of the dataset, this requires that achieving the goal can be measured with existing ground truth. In some cases, also other methods  can be sufficient, for example expert judgment. In a problem-first project different datasets can and should be considered. \cite[p.~3051]{dataScienceProjectTypes} give the metaphor of "mining for valuable minerals or metals at a given geographic location where the existence of the minerals or metals has been established". This means that it is already verified that the business goal can be reached with this specific dataset, hence the metaphor of already discovered mineral occurrence. This project falls into the systematic of an applied data science project.
 	
-	The complementary project type is the data-first project. This type is characterized by a more exploratory approach, and the goal to find problems and patterns. Here, the dataset is at the core of the project and the fixed aspect of the project. In turn, this means swapping the dataset is the start of a new project. When turning to the metaphor of mining for minerals, this type of project would be the exploration of different test pits that promise mineral occurrences \cite[p.~3051]{dataScienceProjectTypes}. It is not clear if a problem can be solved with the investigation, and problem to solve is not known.
+	The complementary project type is the data-first project. This type is characterized by a more exploratory approach, and the goal to find problems and patterns. Here, the dataset is at the core of the project and the fixed aspect of the project. In turn, this means swapping the dataset is the start of a new project. When turning to the metaphor of mining for minerals, this type of project would be the exploration of different test pits that promise mineral occurrences \cite[p.~3051]{dataScienceProjectTypes}. It is not clear if a problem can be solved with the investigation, and the problem to solve is not known. This is an exploratory data science project \cite[p.~3051]{dataScienceProjectTypes}.
 	
-	\subsection{Systematization of this Project}
-	Usually, the project type is not decided on, but implicitly arises out of environmental parameters. The goal of the analysis is clearly stated in before chapters. Still, the research questions (\ref{section:research-q}) aim at finding out which insights the analysis can give. Therefore, this project can be classified as a data-first project.
-	
-	\subsection{Resulting Requirements for Selecting a Dataset}
+	\subsection{Systematization and resulting Requirements}
+	Usually, the project type is not decided on, but implicitly arises out of environmental parameters. The research questions (\ref{section:research-q}) aim at finding out which insights the analysis can give. Therefore, this project can be classified as a data-first project.
+
 	In a data-first project, there is no assumption of patterns. This for once means that a large dataset is required to cover enough ground for accurate derivation of insights. Second, a data-first project does not require structured data \cite{srivastavaDataMining}. Instead, unstructured and semi-structured data is also applicable for data-first projects. The resulting requirement therefore is that the dataset needs to be large enough.
 	
 	
 	\section{Selected Dataset}
+	\label{section:selected-dataset}
 	With the requirements explained, a dataset fulfilling all criteria was found. Inside of SAP, departments have their own data resources, but also shared dataset repositories. One of this inter-departmental registries contains invoices. Usually, this data is used for training machine learning services related to information extraction. The dataset consists of 150.000 invoices, each one as a document, and additionally, a \ac{JSON} representation of the contents.	The information extraction service is trained with the documents as input, and the \ac{JSON} representation as ground-truth for machine learning. The extraction service is able to recognize the information and transforms it into structured data.	
 	
 	For this research task, only the \ac{JSON} files are relevant. The invoice set contains information about the vendors, billing amounts and a descriptions of the goods. They mainly contain day-to-day transactions such as office supply orders, but also business travel expenses. The invoices were collected over several years.
