--- a/Inhalt/04_Inhalt/introduction.tex
+++ b/Inhalt/04_Inhalt/introduction.tex
@@ -17,22 +17,23 @@ How can extracted information provide insights?
 \section{Outline}
 The introductory Chapter briefly explains the motivation behind the thesis. Also, it assesses the current situation and presents research questions. Lastly, it presents the structure of the thesis.
 
-The following Chapter about objectives and criteria gives a detailed task description, and established criteria. In the section \ref{research-model} the process model is explained, evaluated and adjusted.
+The following Chapter about objectives and criteria gives a detailed task description, and establishes criteria. In the Section \ref{research-model}, the process model is explained, evaluated and adjusted.
 
-Chapter 3 gives a glossary of terms. Chapter 3 sheds light on the corporate environment with respect to the aspects of history, organization an technological aspects. 
+Chapter 3 sheds light on the corporate environment with respect to the aspects of history and organization.
 
-The following Chapters follow the structure of the research model presented in \ref{research-model}.
+Chapter 4 explains the process of selecting a dataset. The chapter presents fundamental types of projects and data sources, as well as decision-relevant criteria. With this criteria in mind, the chapter presents the selected dataset.
 
-Chapter 4 explains the process of selecting a dataset. It presents fundamental types of projects and data sources. The Chapter explains the sourcing of the used dataset.
+Chapter 5 explains the business dimension of the task by presenting all relevant business and technical terms in a glossary. The chapter sets objectives and goals, while also proposing different measures to contains risks.
+Additionally, the chapter puts forward an initial assessment of tools and techniques.
 
-Chapter 5 explains the business understanding.
+Chapter 6 explains the data by visualizing different aspects in the dataset. After exploring the data, Chapter 6 also measures the data quality.
 
-Chapter 6 explains the data understanding.
+In Chapter 7, the preparation of the data is explained. The processes of data wrangling and feature extraction are illustrated with an extensive evaluation of alternatives, a theoretical, and a practical implementation of the solution. Further, the chapter details the task of cleaning the data.
 
-In Chapter 7, the preparation of the data is explained. The process of data cleaning is presented, as well as different means for feature extraction.
+Chapter 8 concerns the use of a machine learning model to cluster the data. By presenting different measures, algorithms and models, the chapter presents a careful evaluation of alternatives. Further, the chapter displays the planned implementation and the results of the practical implementation.
 
-Chapter 8 compares algorithms and alternatives for measuring distances.
+Chapter 9 describes the deployment of the solution.
 
-Chapter 9 presents the evaluation of the result. The Chapter evaluated the output from the previous steps.
+Chapter 10 presents the evaluation of the result. The Chapter evaluates the output from the previous steps.
 
-In Chapter 10, a conclusion is drawn, and a further outlook is given.
+In Chapter 11, a conclusion is drawn, and a further outlook is given.
