--- a/Inhalt/04_Inhalt/outlook.tex
+++ b/Inhalt/04_Inhalt/outlook.tex
@@ -26,7 +26,7 @@ This thesis explores two clustering mechanisms in detail. Other algorithms such 
 While the generated cluster labels were quite speaking, they require interpretation effort from the reader. It would be desirable to generate more generalized labels, for example summarizing "tonic", "gin" and "teinacher" into the label "beverages".
 
 % Welche nächsten Fragestellungen/Schritte haben sich durch die Arbeit ergeben?
-
+The next question, further research can investigate is how this solution can be integrated into SAP's existing offerings. Section \ref{section:selected-dataset} explains that the data is already used in the context of document information extraction. Both solutions can be connected, creating a digitization accelerator, allowing a pipeline from paper to insight. Paper-based documents can be scanned, fed into the information extraction service, and processed with the presented solution. The result is an insight into spending, which would otherwise only be possible with tremendous time effort.
 
 
 
